--- a/content/liana/index.mdx
+++ b/content/liana/index.mdx
@@ -220,12 +220,12 @@ Total population according to the 2000 census is 7,501, an increase of 14% since
 ## hello! 
 
 <div style={{ margin: '60px 0', fontFamily: 'serif' }}>
-  <div style={{ position: 'relative', height: '3500px' }}>
+  <div style={{ position: 'relative', height: '4000px' }}>
     
-    {/* STICKY CONTAINER: This stays in place as you scroll */}
+    {/* STICKY CHART: This stays put while the story builds */}
     <div style={{ 
       position: 'sticky', 
-      top: '20vh', 
+      top: '15vh', 
       height: '500px', 
       width: '100%', 
       display: 'flex', 
@@ -234,70 +234,82 @@ Total population according to the 2000 census is 7,501, an increase of 14% since
       justifyContent: 'center',
       zIndex: 1 
     }}>
-      <h3 style={{ fontSize: '1.8rem', fontWeight: 'bold', marginBottom: '30px', textAlign: 'center' }}>
-        Demographic Evolution
+      <h3 style={{ fontSize: '1.8rem', fontWeight: 'bold', marginBottom: '40px', textAlign: 'center' }}>
+        A Growing Skyline: 1960–2020
       </h3>
       
-      <div style={{ position: 'relative', width: '300px', height: '300px', borderBottom: '2px solid #cbd5e1' }}>
+      {/* The Flex Container for all 4 bars */}
+      <div style={{ 
+        display: 'flex', 
+        alignItems: 'flex-end', 
+        gap: '20px', 
+        height: '300px', 
+        borderBottom: '2px solid #cbd5e1', 
+        paddingBottom: '5px',
+        width: 'auto',
+        minWidth: '400px',
+        justifyContent: 'center'
+      }}>
         
-        {/* Each bar is placed in the exact same spot, but only the one 
-            associated with the current "narrative box" will be on top */}
-        
-        {/* 1960: Baseline (Light Blue) */}
-        <div style={{ position: 'absolute', bottom: '0', left: '50%', transform: 'translateX(-50%)', width: '100px', height: '60px', backgroundColor: '#93c5fd', borderRadius: '6px 6px 0 0', zIndex: 1 }}>
-          <div style={{ position: 'absolute', top: '-30px', width: '100%', textAlign: 'center', fontWeight: 'bold', color: '#1e40af' }}>1,968</div>
+        {/* Bar 1: 1960 (1,968) - Always Visible */}
+        <div style={{ display: 'flex', flexDirection: 'column', alignItems: 'center' }}>
+          <div style={{ width: '60px', height: '60px', backgroundColor: '#93c5fd', borderRadius: '4px 4px 0 0', transition: 'all 0.5s ease' }}></div>
+          <span style={{ fontSize: '12px', marginTop: '8px', fontWeight: 'bold' }}>1960</span>
         </div>
 
-        {/* 1970: Redevelopment (Brown) */}
-        <div style={{ position: 'absolute', bottom: '0', left: '50%', transform: 'translateX(-50%)', width: '100px', height: '42px', backgroundColor: '#A6611A', borderRadius: '6px 6px 0 0', zIndex: 2 }}>
-          <div style={{ position: 'absolute', top: '-30px', width: '100%', textAlign: 'center', fontWeight: 'bold', color: '#A6611A' }}>1,387</div>
+        {/* Bar 2: 1970 (1,387) */}
+        <div style={{ display: 'flex', flexDirection: 'column', alignItems: 'center' }}>
+          <div style={{ width: '60px', height: '42px', backgroundColor: '#A6611A', borderRadius: '4px 4px 0 0' }}></div>
+          <span style={{ fontSize: '12px', marginTop: '8px', fontWeight: 'bold' }}>1970</span>
         </div>
 
-        {/* 2000: Expansion (Medium Blue) */}
-        <div style={{ position: 'absolute', bottom: '0', left: '50%', transform: 'translateX(-50%)', width: '100px', height: '220px', backgroundColor: '#3b82f6', borderRadius: '6px 6px 0 0', zIndex: 3 }}>
-          <div style={{ position: 'absolute', top: '-30px', width: '100%', textAlign: 'center', fontWeight: 'bold', color: '#1e3a8a' }}>7,501</div>
+        {/* Bar 3: 2000 (7,501) */}
+        <div style={{ display: 'flex', flexDirection: 'column', alignItems: 'center' }}>
+          <div style={{ width: '60px', height: '220px', backgroundColor: '#3b82f6', borderRadius: '4px 4px 0 0' }}></div>
+          <span style={{ fontSize: '12px', marginTop: '8px', fontWeight: 'bold' }}>2000</span>
         </div>
 
-        {/* 2020: Modern Era (Teal) */}
-        <div style={{ position: 'absolute', bottom: '0', left: '50%', transform: 'translateX(-50%)', width: '100px', height: '290px', backgroundColor: '#018571', borderRadius: '6px 6px 0 0', zIndex: 4 }}>
-          <div style={{ position: 'absolute', top: '-30px', width: '100%', textAlign: 'center', fontWeight: 'bold', color: '#018571' }}>9,718</div>
+        {/* Bar 4: 2020 (9,718) */}
+        <div style={{ display: 'flex', flexDirection: 'column', alignItems: 'center' }}>
+          <div style={{ width: '60px', height: '290px', backgroundColor: '#018571', borderRadius: '4px 4px 0 0' }}></div>
+          <span style={{ fontSize: '12px', marginTop: '8px', fontWeight: 'bold' }}>2020</span>
         </div>
 
       </div>
     </div>
 
-    {/* NARRATIVE BLOCKS: These act as the "drivers" for the animation */}
-    <div style={{ position: 'relative', zIndex: 10 }}>
+    {/* NARRATIVE TRIGGERS: Spaced out to control the "reveal" timing */}
+    <div style={{ position: 'relative', zIndex: 10, marginTop: '-400px' }}>
       
-      {/* Block 1: 1960s */}
-      <div style={{ height: '800px', display: 'flex', alignItems: 'center' }}>
-        <div style={{ background: '#ffffff', padding: '30px', borderRadius: '12px', boxShadow: '0 10px 25px rgba(0,0,0,0.1)', maxWidth: '350px', borderLeft: '6px solid #93c5fd' }}>
-          <h4 style={{ margin: '0 0 10px 0', color: '#1e40af' }}>1960: The Old Loring</h4>
-          <p style={{ fontSize: '15px', lineHeight: '1.6', margin: 0 }}>A stable residential base exists before the push for modern redevelopment begins in the district.</p>
+      {/* 1960 Block */}
+      <div style={{ height: '900px', display: 'flex', alignItems: 'center' }}>
+        <div style={{ background: '#ffffff', padding: '25px', borderRadius: '12px', boxShadow: '0 8px 20px rgba(0,0,0,0.1)', maxWidth: '300px', borderLeft: '5px solid #93c5fd' }}>
+          <h4 style={{ margin: '0 0 10px 0', color: '#1e40af' }}>1960 Population: 1,968</h4>
+          <p style={{ fontSize: '14px', lineHeight: '1.5' }}>The district baseline before major redevelopment.</p>
         </div>
       </div>
 
-      {/* Block 2: 1970s */}
-      <div style={{ height: '800px', display: 'flex', alignItems: 'center', justifyContent: 'flex-end' }}>
-        <div style={{ background: '#ffffff', padding: '30px', borderRadius: '12px', boxShadow: '0 10px 25px rgba(0,0,0,0.1)', maxWidth: '350px', borderRight: '6px solid #A6611A' }}>
-          <h4 style={{ margin: '0 0 10px 0', color: '#A6611A' }}>1970: The Transition</h4>
-          <p style={{ fontSize: '15px', lineHeight: '1.6', margin: 0 }}>Population dips as land is cleared for the M. Paul Friedberg Urban Design Plan. The district is in a state of flux.</p>
+      {/* 1970 Block */}
+      <div style={{ height: '900px', display: 'flex', alignItems: 'center', justifyContent: 'flex-end' }}>
+        <div style={{ background: '#ffffff', padding: '25px', borderRadius: '12px', boxShadow: '0 8px 20px rgba(0,0,0,0.1)', maxWidth: '300px', borderRight: '5px solid #A6611A' }}>
+          <h4 style={{ margin: '0 0 10px 0', color: '#A6611A' }}>1970 Population: 1,387</h4>
+          <p style={{ fontSize: '14px', lineHeight: '1.5' }}>A dip in population occurs as the city clears land for the M. Paul Friedberg Urban Design Plan.</p>
         </div>
       </div>
 
-      {/* Block 3: 2000s */}
-      <div style={{ height: '800px', display: 'flex', alignItems: 'center' }}>
-        <div style={{ background: '#ffffff', padding: '30px', borderRadius: '12px', boxShadow: '0 10px 25px rgba(0,0,0,0.1)', maxWidth: '350px', borderLeft: '6px solid #3b82f6' }}>
-          <h4 style={{ margin: '0 0 10px 0', color: '#1e3a8a' }}>2000: High-Density Success</h4>
-          <p style={{ fontSize: '15px', lineHeight: '1.6', margin: 0 }}>Decades of policy and new construction result in a massive population surge, nearly tripling the baseline.</p>
+      {/* 2000 Block */}
+      <div style={{ height: '900px', display: 'flex', alignItems: 'center' }}>
+        <div style={{ background: '#ffffff', padding: '25px', borderRadius: '12px', boxShadow: '0 8px 20px rgba(0,0,0,0.1)', maxWidth: '300px', borderLeft: '5px solid #3b82f6' }}>
+          <h4 style={{ margin: '0 0 10px 0', color: '#1e3a8a' }}>2000 Population: 7,501</h4>
+          <p style={{ fontSize: '14px', lineHeight: '1.5' }}>High-density towers start to fulfill the redevelopment vision.</p>
         </div>
       </div>
 
-      {/* Block 4: 2020s */}
-      <div style={{ height: '800px', display: 'flex', alignItems: 'center', justifyContent: 'flex-end' }}>
-        <div style={{ background: '#018571', color: '#ffffff', padding: '30px', borderRadius: '12px', boxShadow: '0 10px 25px rgba(1, 133, 113, 0.3)', maxWidth: '350px' }}>
-          <h4 style={{ margin: '0 0 10px 0', color: '#ffffff' }}>2020: The Modern Peak</h4>
-          <p style={{ fontSize: '15px', lineHeight: '1.6', margin: 0 }}>Today, Loring Park is the densest residential area in the city, fulfilling the 50-year-old vision for urban growth.</p>
+      {/* 2020 Block */}
+      <div style={{ height: '900px', display: 'flex', alignItems: 'center', justifyContent: 'flex-end' }}>
+        <div style={{ background: '#018571', color: '#ffffff', padding: '25px', borderRadius: '12px', boxShadow: '0 8px 20px rgba(1, 133, 113, 0.3)', maxWidth: '300px' }}>
+          <h4 style={{ margin: '0 0 10px 0', color: '#ffffff' }}>2020 Population: 9,718</h4>
+          <p style={{ fontSize: '14px', lineHeight: '1.5' }}>Loring Park becomes the densest residential district in Minneapolis.</p>
         </div>
       </div>
 
